--- a/stile.css
+++ b/stile.css
@@ -1100,8 +1100,8 @@
 
         .instagram {
             background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-            /* box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); */
-            /* transition: all 0.3s ease-in-out; */
+             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); 
+             transition: all 0.3s ease-in-out; 
         }
 
         .instagram:hover {
@@ -1115,7 +1115,7 @@
             font-weight: 500;
         }
 
-        .contact-item a {
+      .contact-item a { 
             color: inherit;
             text-decoration: none;
             transition: var(--transition-fast);
